overflow-x bug

--- a/cover.css
+++ b/cover.css
@@ -22,6 +22,7 @@
  */
 
 body {
+  overflow-x: hidden;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
   background-color: rgb(22, 18, 50);
